# pluginlib

./: CMakeLists.txt  package.xml
include/pluginlib/: class_loader.h  class_loader_imp.h
src/: plugin_tool.cpp
test/: utest.cpp
