<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>pluginlib</name>
  <version>1.10.3</version>
  <description>
    The pluginlib package provides tools for writing and dynamically loading plugins using the ROS build infrastructure.
    To work, these tools require plugin providers to register their plugins in the package.xml of their package.
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/pluginlib</url>
  <url type="bugtracker">https://github.com/ros/pluginlib/issues</url>
  <url type="repository">https://github.com/ros/pluginlib</url>
  <author>Eitan Marder-Eppstein</author>
  <author>Tully Foote</author>
  <author>Dirk Thomas</author>
  <author>Mirza Shah</author>

  <buildtool_depend version_gte="0.5.68">ament</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>tinyxml</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>tinyxml</exec_depend>

  <export>
    <pluginlib plugin="${prefix}/test/test_plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
